# PxRay

./: .gitignore  CMakeLists.txt  README.md
BRDF/: BRDF.h  Lambertian.cpp  PerfectSpecular.cpp
Camera/: Fisheye.cpp  Fisheye.h  Pinhole.h
GeometricObjects/: GeometricObject.cpp  Plane.cpp  Plane.h  Rectangle.cpp  Rectangle.h  Sphere.h
Lights/: Ambient.cpp  Directional.cpp  PointLight.cpp
Materials/: Phong.cpp  Reflective.h
Sampler/: MultiJittered.h  Regular.cpp  Sampler.cpp  Sampler.h
Tracer/: MultipleObjects.cpp  MultipleObjects.h  RayCast.cpp  RayCast.h  SingleSphere.cpp  SingleSphere.h
Utilities/: BBox.h  Constants.h  Math.h  Matrix.h  Normal.cpp  Normal.h  Point3D.cpp  RGBColor.cpp  Ray.cpp  Ray.h  ShadeRec.cpp  ShadeRec.h  Vector3D.cpp  Vector3D.h
World/: ViewPlane.h
src/: main.cpp
src/BRDF/: BRDF.cpp  BRDF.h  GlossySpecular.cpp  GlossySpecular.h  Lambertian.cpp  Lambertian.h  PerfectSpecular.cpp  PerfectSpecular.h
src/Camera/: Camera.cpp  Camera.h  Fisheye.cpp  Fisheye.h  Pinhole.cpp  Pinhole.h
src/GeometricObjects/: GeometricObject.cpp  GeometricObject.h  OpenCylinder.cpp  OpenCylinder.h  Plane.cpp  Plane.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h
src/Lights/: Ambient.cpp  Ambient.h  AreaLight.cpp  AreaLight.h  Directional.cpp  Directional.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
src/Materials/: Emissive.cpp  Emissive.h  Material.cpp  Material.h  Matte.cpp  Matte.h  Phong.cpp  Phong.h  Reflective.cpp  Reflective.h
src/Sampler/: MultiJittered.cpp  MultiJittered.h  Regular.cpp  Regular.h  Sampler.cpp  Sampler.h
src/Tracer/: AreaLighting.cpp  AreaLighting.h  MultipleObjects.cpp  MultipleObjects.h  RayCast.cpp  RayCast.h  SingleSphere.cpp  SingleSphere.h  Tracer.cpp  Tracer.h  Whitted.cpp  Whitted.h
src/Utilities/: BBox.cpp  BBox.h  Constants.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Normal.cpp  Normal.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  RGBColor.cpp  RGBColor.h  Ray.cpp  Ray.h  ShadeRec.cpp  ShadeRec.h  Vector3D.cpp  Vector3D.h
src/World/: ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
src/core/: Transform.cpp  Transform.h  efloat.cpp  efloat.h  geometry.cpp  geometry.h  interaction.cpp  interaction.h  pbrt.h  scene.cpp  scene.h  shape.cpp  shape.h  stringprint.h  transform.cpp  transform.h
src/main/: pbrt.cpp
src/shapes/: sphere.cpp  sphere.h
