cmake_minimum_required(VERSION 3.3)
project(TinyRay)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
        BRDF/BRDF.cpp
        BRDF/BRDF.h
        BRDF/GlossySpecular.cpp
        BRDF/GlossySpecular.h
        BRDF/Lambertian.cpp
        BRDF/Lambertian.h
        BRDF/PerfectSpecular.cpp
        BRDF/PerfectSpecular.h
        Camera/Camera.cpp
        Camera/Camera.h
        Camera/Fisheye.cpp
        Camera/Fisheye.h
        Camera/Pinhole.cpp
        Camera/Pinhole.h
        GeometricObjects/GeometricObject.cpp
        GeometricObjects/GeometricObject.h
        GeometricObjects/Plane.cpp
        GeometricObjects/Plane.h
        GeometricObjects/Rectangle.cpp
        GeometricObjects/Rectangle.h
        GeometricObjects/Sphere.cpp
        GeometricObjects/Sphere.h
        Lights/Ambient.cpp
        Lights/Ambient.h
        Lights/Directional.cpp
        Lights/Directional.h
        Lights/Light.cpp
        Lights/Light.h
        Lights/PointLight.cpp
        Lights/PointLight.h
        Materials/Material.cpp
        Materials/Material.h
        Materials/Matte.cpp
        Materials/Matte.h
        Materials/Phong.cpp
        Materials/Phong.h
        Materials/Reflective.cpp
        Materials/Reflective.h
        Sampler/MultiJittered.cpp
        Sampler/MultiJittered.h
        Sampler/Regular.cpp
        Sampler/Regular.h
        Sampler/Sampler.cpp
        Sampler/Sampler.h
        Tracer/MultipleObjects.cpp
        Tracer/MultipleObjects.h
        Tracer/RayCast.cpp
        Tracer/RayCast.h
        Tracer/SingleSphere.cpp
        Tracer/SingleSphere.h
        Tracer/Tracer.cpp
        Tracer/Tracer.h
        Tracer/Whitted.cpp
        Tracer/Whitted.h
        Utilities/BBox.cpp
        Utilities/BBox.h
        Utilities/Constants.h
        Utilities/Math.cpp
        Utilities/Math.h
        Utilities/Matrix.cpp
        Utilities/Matrix.h
        Utilities/Normal.cpp
        Utilities/Normal.h
        Utilities/Point2D.cpp
        Utilities/Point2D.h
        Utilities/Point3D.cpp
        Utilities/Point3D.h
        Utilities/Ray.cpp
        Utilities/Ray.h
        Utilities/RGBColor.cpp
        Utilities/RGBColor.h
        Utilities/ShadeRec.cpp
        Utilities/ShadeRec.h
        Utilities/Vector3D.cpp
        Utilities/Vector3D.h
        World/ViewPlane.cpp
        World/ViewPlane.h
        World/World.cpp
        World/World.h
        main.cpp)

add_executable(TinyRay ${SOURCE_FILES})