cmake_minimum_required(VERSION 3.3)
project(TinyRay)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
        src/BRDF/BRDF.cpp
        src/BRDF/BRDF.h
        src/BRDF/GlossySpecular.cpp
        src/BRDF/GlossySpecular.h
        src/BRDF/Lambertian.cpp
        src/BRDF/Lambertian.h
        src/BRDF/PerfectSpecular.cpp
        src/BRDF/PerfectSpecular.h
        src/Camera/Camera.cpp
        src/Camera/Camera.h
        src/Camera/Fisheye.cpp
        src/Camera/Fisheye.h
        src/Camera/Pinhole.cpp
        src/Camera/Pinhole.h
        src/GeometricObjects/GeometricObject.cpp
        src/GeometricObjects/GeometricObject.h
        src/GeometricObjects/Plane.cpp
        src/GeometricObjects/Plane.h
        src/GeometricObjects/Rectangle.cpp
        src/GeometricObjects/Rectangle.h
        src/GeometricObjects/Sphere.cpp
        src/GeometricObjects/Sphere.h
        src/Lights/Ambient.cpp
        src/Lights/Ambient.h
        src/Lights/Directional.cpp
        src/Lights/Directional.h
        src/Lights/Light.cpp
        src/Lights/Light.h
        src/Lights/PointLight.cpp
        src/Lights/PointLight.h
        src/Materials/Material.cpp
        src/Materials/Material.h
        src/Materials/Matte.cpp
        src/Materials/Matte.h
        src/Materials/Phong.cpp
        src/Materials/Phong.h
        src/Materials/Reflective.cpp
        src/Materials/Reflective.h
        src/Sampler/MultiJittered.cpp
        src/Sampler/MultiJittered.h
        src/Sampler/Regular.cpp
        src/Sampler/Regular.h
        src/Sampler/Sampler.cpp
        src/Sampler/Sampler.h
        src/Tracer/MultipleObjects.cpp
        src/Tracer/MultipleObjects.h
        src/Tracer/RayCast.cpp
        src/Tracer/RayCast.h
        src/Tracer/SingleSphere.cpp
        src/Tracer/SingleSphere.h
        src/Tracer/Tracer.cpp
        src/Tracer/Tracer.h
        src/Tracer/Whitted.cpp
        src/Tracer/Whitted.h
        src/Utilities/BBox.cpp
        src/Utilities/BBox.h
        src/Utilities/Constants.h
        src/Utilities/Math.cpp
        src/Utilities/Math.h
        src/Utilities/Matrix.cpp
        src/Utilities/Matrix.h
        src/Utilities/Normal.cpp
        src/Utilities/Normal.h
        src/Utilities/Point2D.cpp
        src/Utilities/Point2D.h
        src/Utilities/Point3D.cpp
        src/Utilities/Point3D.h
        src/Utilities/Ray.cpp
        src/Utilities/Ray.h
        src/Utilities/RGBColor.cpp
        src/Utilities/RGBColor.h
        src/Utilities/ShadeRec.cpp
        src/Utilities/ShadeRec.h
        src/Utilities/Vector3D.cpp
        src/Utilities/Vector3D.h
        src/World/ViewPlane.cpp
        src/World/ViewPlane.h
        src/World/World.cpp
        src/World/World.h
        src/main.cpp src/GeometricObjects/OpenCylinder.cpp src/GeometricObjects/OpenCylinder.h src/Build/Build.cpp src/Build/Build.cpp)

add_executable(TinyRay ${SOURCE_FILES} src/GeometricObjects/OpenCylinder.cpp src/GeometricObjects/OpenCylinder.h)